--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redes Sociais</title>
     <link rel="shortcut icon" href="pacote-d013/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="Estilos/estyle.css">
 </head>
 <body>
+    <main>
+           <section id="telefone"></section>
+
+           <sectio id="Redes"></section>
+ 
+
+    </main>
     
 </body>
 </html>
