--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
     <main>
-           <section id="telefone"></section>
+           <section id="telefone">
+            <iframe src="home.html" id="tela" name="tela" frameborder="0"></iframe>
+           </section>
 
            <sectio id="Redes"></section>
- 
 
     </main>
     
