--- a/index.html
+++ b/index.html
@@ -11,11 +11,30 @@
     <main>
            <section id="telefone">
             <iframe src="home.html" id="tela" name="tela" frameborder="0"></iframe>
+
+
+
            </section>
 
-           <sectio id="Redes"></section>
+           <section id="Redes">
 
+            <a href="index.html" target="name"><img src="pacote-d013/imagens/logo-home.jpg" alt="home"></a> <br>
+
+            <a href="youtube.html" target="name"><img src="pacote-d013/imagens/logo-youtube.jpg" alt="Youtube"></a> <br>
+ 
+            <a href="#" target="name"><img src="pacote-d013/imagens/logo-facebook.jpg" alt="Facebook"></a> <br>
+ 
+            <a href="#" target="name"><img src="pacote-d013/imagens/logo-twitter.jpg" alt="Twitter"></a> <br>
+ 
+            <a href="#" target="name"><img src="pacote-d013/imagens/logo-github.jpg" alt="Github"></a> <br>
+ 
+            <a href="#" target="name"><img src="pacote-d013/imagens/logo-instagram.jpg" alt="Instagram"> </a>
+
+            </section>
+
+            
     </main>
     
 </body>
+
 </html>
