--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
 
            <section id="Redes">
 
-            <a href="index.html" target="name"><img src="pacote-d013/imagens/logo-home.jpg" alt="home"></a> <br>
+            <a href="home.html" target="tela"><img src="pacote-d013/imagens/logo-home.jpg" alt="home"></a> <br>
 
-            <a href="youtube.html" target="name"><img src="pacote-d013/imagens/logo-youtube.jpg" alt="Youtube"></a> <br>
+            <a href="Youtube.html" target="tela"><img src="pacote-d013/imagens/logo-youtube.jpg" alt="Youtube"></a> <br>
  
-            <a href="#" target="name"><img src="pacote-d013/imagens/logo-facebook.jpg" alt="Facebook"></a> <br>
+            <a href="facebook.html" target="tela"><img src="pacote-d013/imagens/logo-facebook.jpg" alt="Facebook"></a> <br>
  
-            <a href="#" target="name"><img src="pacote-d013/imagens/logo-twitter.jpg" alt="Twitter"></a> <br>
+            <a href="twitter.html" target="tela"><img src="pacote-d013/imagens/logo-twitter.jpg" alt="Twitter"></a> <br>
  
-            <a href="#" target="name"><img src="pacote-d013/imagens/logo-github.jpg" alt="Github"></a> <br>
+            <a href="Github.html" target="tela"><img src="pacote-d013/imagens/logo-github.jpg" alt="Github"></a> <br>
  
-            <a href="#" target="name"><img src="pacote-d013/imagens/logo-instagram.jpg" alt="Instagram"> </a>
+            <a href="instagram.html" target="tela"><img src="pacote-d013/imagens/logo-instagram.jpg" alt="Instagram"> </a>
 
             </section>
 
